fix subscription line img path

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </aside>
                 <aside class="subscription">
                     <h2 class="subscription__title">Рассылка</h2>
-                    <img src="/images/line.png" alt="line" class="subscription__line">
+                    <img src="/images/Line.png" alt="line" class="subscription__line">
                     <form action="#" class="subscription-form">
                         <input type="email" placeholder="Ваш email-адрес" name="email" class="subscription-form__email">
                         <button type="submit" class="subscription-btn">Подписаться</button>
